tests/fixtures/positive/naming/FunctionNameMaxLength.kt
package naming

fun thisIsAnExtremelyLongFunctionNx() {
    println("too long")
}
