tests/fixtures/negative/naming/FunctionNameMinLength.kt
package naming

fun abc() {
    println("ok")
}
